--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
   <h1><b>Parent Survivors of Suicide Loss</b></h1>
-  <p>Free support group in Denver for people who have lost a child to suicide</p>
+  <p>Free support group in Denver for parents who have lost a child to suicide</p>
 </header>
 
 <!-- Grid -->
@@ -33,7 +33,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>We are a peer led support group open to any parent who has lost a child to suicide. We meet every third Thursday of the month from 7-9pm at Bethany Lutheran Church 4500 E. Hamden Ave Cherry Hills, CO 80113 located near I-25 and Hamden Ave. </p>
+      <p>We are a peer led support group open to any parent who has lost a child to suicide. We meet every third Tuesday of the month from 7-9pm at Bethany Lutheran Church, 4500 E. Hamden Ave Cherry Hills, CO 80113 located near I-25 and Hamden Ave. </p>
       <p>We are currently meeting on zoom due to covid-19. Please contact:</p>
       <h5><b>Karen Galinkin</b></h5>
       <h5>karengalinkin@gmail.com</h5>
