added reading list

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h5><b>Karen Galinkin</b></h5>
       <h5>karengalinkin@gmail.com</h5>
       <p>for details, questions or comments</p>
+      <br>
+      <a href="SuicideBooks.pdf" download>Reading list</a>
       <div class="w3-row">
         <div class="w3-col m8 s12">
           <p><button class="w3-button w3-padding-large w3-white w3-border" id="myBtn"><b>READ MORE »</b></button></p>
