added to mission statement

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <!-- Modal content -->
           <div class="modal-content">
             <span class="close">&times;</span>
-            <p>Mission statement: To support parents who have lost a child/children to suicide and prevention and postvention of suicide by donating books to libraries and schools.</p>
+            <p>Mission statement: To support parents who have lost a child/children to suicide by in person monthly peer led meetings, and prevention and postvention of suicide by donating books to libraries and schools.</p>
           </div>
         
         </div>
